[tool.poetry]
name = "deep_learning_badminton"
version = "0.1.0"
description = "Deep learning project with AMD GPU support (Radeon Pro)"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.2.0"
pandas = "^2.3.2"
ipykernel = "^6.30.1"
scipy = "^1.16.1"
scikit-learn = "^1.7.1"
# PyTorch (ROCm is not supported on Windows, so install regular PyTorch)
torch = "^2.8.0"
torchvision = "^0.23.0"
torchaudio = "^2.8.0"
opencv-python = "^4.12.0.88"
# ONNX Runtime with DirectML (for Windows/AMD GPU support)
onnxruntime-directml = "^1.22.0"
# Other useful packages
Pillow = "^11.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
